# thalex_rust_sdk

./: .gitignore  Cargo.toml  README.md  makefile  new_schema.json  openapi.json  openapi.yaml  openapi_updated.json  shell.fish  shell.nix  ws_spec.json  ws_spec.yaml  ws_spec_updated.json
.github/workflows/: common.yaml  main.yaml
audit/: FILES_INDEX.md  FILES_INDEX_en.md  FINAL_REPORT.md  FINAL_REPORT_en.md  PERFORMANCE_RESOURCES.md  PERFORMANCE_RESOURCES_en.md  README.md  README_en.md  TRANSLATION_SUMMARY.md  a.txt  a2.txt  a3.txt  a4.txt  audit_feedback.md  benchmark_guide.md  benchmark_guide_en.md  benchmark_results_analysis.md  benchmark_results_analysis_en.md  code_analysis.md  code_analysis_en.md  implementation_examples.md  implementation_examples_en.md  implementation_readiness_assessment.md  implementation_readiness_assessment_en.md  optimization_recommendations.md  optimization_recommendations_en.md  performance_analysis.md  performance_analysis_en.md  step_by_step_implementation_guide.md  step_by_step_implementation_guide_en.md  thalex_rust_sdk_audit_recheck_report_v2.md  thalex_rust_sdk_audit_recheck_report_v2_en.md  thalex_rust_sdk_audit_recheck_report_v3.md  thalex_rust_sdk_audit_recheck_report_v5.md  thalex_rust_sdk_audit_targeted_fixes_v1.md  thalex_rust_sdk_audit_targeted_fixes_v2.md  thalex_rust_sdk_audit_targeted_fixes_v3.md  thalex_rust_sdk_audit_vs_src_review_v4.md  thalex_rust_sdk_perf_addendum.md  thalex_rust_sdk_perf_addendum_en.md  (+3 more)
benches/: README.md  handle_incoming.rs  json_parsing.rs  mutex_contention.rs  subscription_throughput.rs
build_scripts/: api.yaml  build-rpc.py  build-ws.py  build_ws_schema.py  fix_array_types.py  post-process.py  pre-process.py  readme_builder.py  utils.py
build_scripts/templates/: rpc.py  subscriptions.py
examples/: collect_all_trades.rs  collect_ohlc_data.rs  create_client.rs  create_order.rs  ohlc_streamer.rs  simple_quoter.rs  simple_quoter.rs.bak  subscribe.rs  subscribe_account.rs  subscribe_instruments.rs  subscribe_ticker.rs
src/: auth_utils.rs  lib.rs  routing.rs  types.rs  utils.rs  ws_client.rs
src/channels/: mod.rs  subscriptions.rs
src/manual_models/: error_code.rs  historic_data_index.rs  historic_data_mark.rs  mod.rs
src/models/: account.rs  account_bots_notification.rs  added.rs  (+376 more)
tests/: accounting_test.rs  bot_test.rs  conditional_test.rs  historical_data_test.rs  market_data_test.rs  mm_test.rs  subscription_test.rs  trading_test.rs  ws_test.rs
(+22 files in other folders)
