[package]
name = "thalex_rust_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite ={ version = "0.28", features = ["native-tls"] } 
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.29"
simple_logger = "5.1.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
dotenv = "0.15.0"
# We have dev dependencies

[dev-dependencies]
csv = "1.4.0"
