[package]
name = "thalex_rust_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite ={ version = "0.28", features = ["native-tls"] } 
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.29"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
thiserror = "2.0.17"

[dev-dependencies]
simple_logger = "5.1.0"
dotenv = "0.15.0"
csv = "1.4.0"
serial_test = { version = "3.2.0", features = ["async"] }
rust_decimal_macros = "1.39.0"
rust_decimal = "1.39.0"
chrono = "0.4.42"
