[package]
name = "thalex_rust_sdk"
version = "0.1.30"
edition = "2024"
description = "Trading client for Thalex exchange"
repository = "https://github.com/8ball030/thalex_rust_sdk"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["fs", "time", "sync", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.29"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
thiserror = "2.0.17"
rustls = { version = "0.23.35", features = ["aws-lc-rs", ] }
serde_repr = "0.1.20"
dashmap = "6.1.0"

[dev-dependencies]
simple_logger = "5.1.0"
dotenv = "0.15.0"
csv = "1.4.0"
serial_test = { version = "3.2.0", features = ["async"] }
rust_decimal_macros = "1.39.0"
rust_decimal = "1.39.0"
chrono = "0.4.42"
criterion = { version = "0.8.1", features = ["async_tokio", "html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "json_parsing"
harness = false

[[bench]]
name = "handle_incoming"
harness = false

[[bench]]
name = "mutex_contention"
harness = false

[[bench]]
name = "subscription_throughput"
harness = false

[profile.dev]
opt-level = 0
debug = 0
